--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 	<!-- the entire body must be written by student -->
 	<nav>
 		<ul>
-			<li><a>Home</a></li>
-			<li><a>About</a></li>
-			<li><a>Contact us</a></li>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Contact us</a></li>
 		</ul>
 		
 		
@@ -25,7 +25,7 @@
 Your browser does not support the audio element.
 </audio>
 	<audio controls>
-  <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
+  <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
 Your browser does not support the audio element.
 </audio>
 	<audio controls>
